# voxel

./: .gitignore  CMakeLists.txt  Voxel.sln
Voxel/: Cube.h  Keyboard.h  Scene.h  Settings.cpp  Settings.h  ShaderClass.h  Voxel.vcxproj  Voxel.vcxproj.filters  Window.h  camera.h  chunk.h  chunkMesh.h  glad.c  main.cpp  mouse.cpp  mouse.h  player.h  textures.h
Voxel/shaders/: default.frag  default.vert
assets/shaders/: default.frag  default.vert
include/: Cube.h  Keyboard.h  Scene.h  Settings.h  ShaderClass.h  Window.h  World.h  camera.h  chunk.h  chunkMesh.h  mouse.h  player.h  textures.h
include/glad/: glad.h
libraries/include/glad/: glad.h
src/: Settings.cpp  glad.c  main.cpp  mouse.cpp
